# tinyPiXApp

./: .gitignore  CMakeLists.txt  README.md
Application/calendar/: 4a1a4cb1-5d7b-952f-9ddd-416857b44e84.json  CMakeLists.txt  Readme.md
Application/calendar/src/: calendarGlobal.h  mainWindowService.cpp
Application/deskTop/: CMakeLists.txt  Readme.md
Application/deskTop/conf/: appIndexConfig.json  bottomBarAppConfig.json
Application/deskTop/src/: deskEntry.cpp  deskEntry.h  deskScreen.cpp  deskScreen.h  deskTopGlobal.hpp  mainAppScrollPanel.cpp  mainAppScrollPanel.h
Application/deskTop/src/toolBar/: appSettingBar.cpp  appSettingBar.h  bottomBar.cpp  bottomBar.h  navigationBar.cpp  navigationBar.h  powerManage.cpp  powerManage.h  topBar.cpp  topBar.h
Application/deskTop/src/toolModule/: caculateAppPos.cpp  caculateAppPos.h  desktopAppButton.cpp  desktopAppButton.h
Application/deskTop/src/toolWindow/: appOperateMaskWindow.cpp  appOperateMaskWindow.h  appPreviewWidget.cpp  appPreviewWidget.h  appTaskManageWindow.cpp  appTaskManageWindow.h  sysLockWindow.cpp  sysLockWindow.h
Application/fileManagement/: 6e3aaf4e-7a62-46d7-172d-e244038c4ae7.json  CMakeLists.txt  Readme.md
Application/fileManagement/data/: cache.data
Application/fileManagement/src/: fileManagementGlobal.h  main.cpp  mainWindowService.cpp  mainWindowService.h
Application/fileManagement/src/browserToolWindow/: fileListWindow.cpp  fileListWindow.h  listFileItem.cpp  listFileItem.h  settingWindow.cpp  settingWindow.h
Application/fileManagement/src/recentlyToolWindow/: clearSpaceWindow.cpp  clearSpaceWindow.h  pressPopWindow.cpp  pressPopWindow.h
Application/fileManagement/src/sonWindow/: browseWindow.cpp  browseWindow.h  recentlyWindow.cpp  recentlyWindow.h
Application/fileManagement/src/toolWindow/: diskDeviceCheckBox.cpp  diskDeviceCheckBox.h  usbPopButton.cpp  usbPopButton.h
Application/mediaPlayer/: 1afd93b7-c938-f604-57be-edc95df6cb36.json  CMakeLists.txt  Readme.md
Application/mediaPlayer/src/: main.cpp  mainWindowService.cpp  mainWindowService.h  mediaPlayerGlobal.h
Application/mediaPlayer/src/toolBar/: bottomBar.cpp  bottomBar.h  topBar.cpp  topBar.h
Application/photoAlbum/: 8aa1ea99-75af-92d1-0988-998803157aac.json  CMakeLists.txt  Readme.md
Application/photoAlbum/src/: mainWindowService.cpp  photoAlbumGlobal.h
Application/systemSettings/: 94301ca4-d753-9ae8-626a-206c15d6abdd.json  CMakeLists.txt  Readme.md
Application/systemSettings/src/: main.cpp  mainWindowService.cpp  mainWindowService.h  systemSettingsGlobal.h
Application/systemSettings/src/settingWindow/: InternetSettingWindow.cpp  InternetSettingWindow.h  bluetoothSettingWindow.cpp  bluetoothSettingWindow.h  settingBase.cpp  settingBase.h
ComDemoApplication/animationDemo/: 88fab468-3413-4fc1-a711-67854fc7a282.json  CMakeLists.txt  Readme.md
ComDemoApplication/animationDemo/src/: mainWindowService.cpp
ComDemoApplication/batteryDemo/: 33406742-ceb3-3833-c0a5-ae7e3a82811f.json  CMakeLists.txt  Readme.md
ComDemoApplication/batteryDemo/src/: mainWindowService.cpp
ComDemoApplication/buttonDemo/: CMakeLists.txt  Readme.md  e8527fe8-e246-c133-75a5-b6d2abb3fd3c.json
ComDemoApplication/buttonDemo/src/: mainWindowService.cpp
ComDemoApplication/checkBoxDemo/: CMakeLists.txt  Readme.md  ca63b371-bd0a-77c2-adfa-10bc57a63e4b.json
ComDemoApplication/checkBoxDemo/src/: mainWindowService.cpp
ComDemoApplication/comboxDemo/: 2084e4fb-a01d-4404-b515-956c095f042c.json  CMakeLists.txt  Readme.md
ComDemoApplication/comboxDemo/src/: mainWindowService.cpp  mainWindowService.h
ComDemoApplication/flexLayoutDemo/: CMakeLists.txt  Readme.md  ec71147b-b8c7-8db7-b46b-916a5c30b2b9.json
ComDemoApplication/flexLayoutDemo/src/: mainWindowService.cpp
ComDemoApplication/labelDemo/: CMakeLists.txt  Readme.md  fb1412cf-84de-4138-b401-215b6e9b1c11.json
ComDemoApplication/labelDemo/src/: mainWindowService.cpp
ComDemoApplication/progressBarDemo/: CMakeLists.txt  Readme.md  de288e32-9a68-40c9-81fa-e57609c226e0.json
ComDemoApplication/progressBarDemo/src/: mainWindowService.cpp
ComDemoApplication/sliderDemo/: CMakeLists.txt  Readme.md  bee1bc99-c541-45b4-b3be-2f00145f8106.json
ComDemoApplication/sliderDemo/src/: mainWindowService.cpp  mainWindowService.h
cmake/: SetupAppInstallation.cmake
install/: dopack.sh
